# libpsl

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  .travis_coveralls.sh  AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.MSVC.md  README.md  api-index-full.html  autogen.sh  ch01.html  configure.ac  deprecated-api-index.html  index.html  index.sgml  libpsl-Public-Suffix-List-functions.html  libpsl.devhelp2  libpsl.html  libpsl.pc.in  libtool_version_info.txt  make_deb  meson.build  meson.build.in  meson_options.txt  object-tree.html  sum_of_digits_1to10.c
.github/workflows/: codeql.yml  unit-tests.yml
contrib/: check-hard  check-hard-meson
data/: Makefile.am
debian/: README.source  build  changelog  clean  control  copyright  gbp.conf  libpsl-dev.install  libpsl-dev.links  libpsl-dev.manpages  libpsl.doc-base  libpsl0.symbols  libpsl5.symbols  psl-make-dafsa.install  psl-make-dafsa.manpages  psl.install  psl.manpages  rules  shlibs.local.ex  watch
debian/patches/: 0001-enable-build-of-docs.patch  0001-remove-git-submodules.patch  0002-Embed-_psl_compile_time-derived-from-SOURCE_DATE_EPO.patch  0002-Fix-psl_builtin_outdated.patch  0002-Patch-SO-version-to-6-0-1.patch  0003-Extend-tools-psl-print-info-and-version.patch  series
debian/upstream/: signing-key.asc
docs/libpsl/: Makefile.am  libpsl-docs.sgml  libpsl-sections.txt  meson.build  version.xml.in
fuzz/: Makefile.am  README.md  fuzzer.h  get_all_corpora  get_ossfuzz_corpora  libpsl_fuzzer.c  libpsl_load_dafsa_fuzzer.c  libpsl_load_fuzzer.c  main.c  meson.build  run-afl.sh  run-clang.sh
fuzz/libpsl_fuzzer.in/: com  multibyte
fuzz/libpsl_load_dafsa_fuzzer.in/: dafsa
include/: Makefile.am  libpsl-inline.h  libpsl.h  libpsl.h.in  meson.build
lcov/: index-sort-f.html  index-sort-l.html  index.html
lcov/usr/oms/src/libpsl/fuzz/: index-sort-f.html  index-sort-l.html  index.html  libpsl_fuzzer.c.func-sort-c.html  libpsl_fuzzer.c.func.html  libpsl_fuzzer.c.gcov.html  libpsl_load_dafsa_fuzzer.c.func-sort-c.html  libpsl_load_dafsa_fuzzer.c.func.html  libpsl_load_dafsa_fuzzer.c.gcov.html  libpsl_load_fuzzer.c.func-sort-c.html  libpsl_load_fuzzer.c.func.html  libpsl_load_fuzzer.c.gcov.html  main.c.func-sort-c.html  main.c.func.html  main.c.gcov.html
lcov/usr/oms/src/libpsl/src/: index-sort-f.html  index-sort-l.html  index.html  lookup_string_in_fixed_set.c.func-sort-c.html  lookup_string_in_fixed_set.c.func.html  lookup_string_in_fixed_set.c.gcov.html  psl.c.func-sort-c.html  psl.c.func.html  psl.c.gcov.html
linter/: pslint.py  pslint_selftest.sh  test_allowedchars.expected  test_spaces.expected  test_spaces.input
msvc/: build-rules-msvc.mak  config-msvc.mak.in  config.h.win32.in  create-lists-msvc.mak  detectenv-msvc.mak  generate-msvc.mak  install-msvc.mak  libpsl-pc.py  replace.py
src/: LICENSE.chromium  Makefile.am  lookup_string_in_fixed_set.c  make_dafsa.py  meson.build  psl-inline.c  psl-make-dafsa  psl-make-dafsa.1  psl.c  psl2c.c  pslint.py
tests/: Makefile.am  meson.build  test-is-cookie-domain-acceptable.c  test-is-public-all.c  test-is-public-builtin.c  test-is-public-inline.c  test-is-public.c  test-is-tld.c  test-registrable-domain.c
tools/: Makefile.am  make_dafsa.py  meson.build  psl  psl.1  psl.c
tools/.deps/: psl.Po
